<?xml version="1.0"?>
<package format="3">
  <name>semantic_map</name>
  <version>0.1.0</version>
  <description>RGB-D detection projection and fusion utilities for 2D semantic maps.</description>
  <maintainer email="maintainers@example.com">semantic_map maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
